--- a/about.html
+++ b/about.html
@@ -21,31 +21,28 @@
             </a>
         </div>
 
+        <div class="col-1"></div>
+
 
         <div class="col-2-bar">
-            <a href="MyReservation.html" class="footer">
+            <a href="Reservations.html" class="footer">
                 <button class="headerBTN">My reservation</button>
             </a>
         </div>
 
         <div class="col-2-bar">
-            <a href="LiveMap.html" class="footer">
+            <a href="liveMap.html" class="footer">
                 <button class="headerBTN">Map</button>
             </a>
         </div>
 
         <div class="col-2-bar">
-            <a href="About.html" class="footer">
+            <a href="about.html" class="footer">
                 <button class="headerBTN">About</button>
             </a>
         </div>
 
-        <div class="col-2-bar">
-            <a href="Help.html" class="footer">
-                <button class="headerBTN">Help</button>
-            </a>
-        </div>
-
+        <div class="col-1"></div>
 
         <div class="col-2-bar">
             <a href="signin.html" class="footer">
@@ -55,20 +52,26 @@
 </div>
 
 
+<div class="col-12 findTable" id = "background">
+    <div class = "col-1"></div>
+         <div class="col-10" class="About">
+              <h1 class="About">Our story</h1>
+                   <p style="color: dimgray">
+                    In SiteMe We love what can happen around the restaurant table, and we are committed to empowering that experience.<br>
 
-<div class="col-12 findTable">
-         <div class="col-8">
-              <h1 id="About">Our story</h1>
-                   <ul>
-                    In SiteMe We love what can happen around the restaurant table. And we are committed to empowering that experience. From helping restaurants of all sizes thrive, to enabling diners to find and book the perfect table for every occasion, our story is one of human connection—among diners and restaurants, and between restaurants and their communities.
+                    From helping restaurants of all sizes thrive, to enabling diners to find and book the perfect table for every occasion.<br>
 
-                    Now, we’re growing globally like never before, and continuing to lead the conversation in the tech and restaurant spaces with products that anticipate the ever-evolving needs of both restaurants and diners.
+                    Our story is one of human connection—among diners and restaurants, and between restaurants and their communities.<br>
 
-                    With our passion for hospitality, we take pride in bringing together people and the restaurants they love in the moments that matter. Pull up a chair and join us.
-                   </ul>
-         <div class="frame" id="images"></div>
-         <img src="images/about.png">
+                    We are growing globally like never before, and continuing to lead the conversation in the tech and restaurant spaces with products that anticipate the ever-evolving needs of both restaurants and diners.<br>
+
+                    With our passion for hospitality, we take pride in bringing together people and the restaurants they love in the moments that matter.<br>
+
+                    <h3 class="center" style="color: dimgray;">Pull up a chair and join us</h3>
+                   </p>
+         <div id="frame" class = "col-12"  id="images"></div>
     </div>
+    <div class = "col-1"></div>
 </div>
 
 
@@ -79,7 +82,7 @@
     <div class="col-4-footer">
         <div class="col-12-footer">
             <img src="images/logo.PNG" class = "logo"><br>
-            <h1 id="FootCont">Contact us - 052-5225280</h1>
+            <h1 class="FootCont">Contact us - 052-5225280</h1>
         </div>
         <div class="col-12-footer">
           <button class="button1_left" onclick="topFunction()" id="topFunction" title="Back to top">Back to top</button>
@@ -89,35 +92,40 @@
     <div class="col-4-footer">
         <div class="rowFooter">
             <div class="col-12-footer">
-                <a href="otherPage.html" class="footer">
+                <a href="Reservations.html" class="footer">
                     <button class="footerBTN">My reservation</button>
                 </a>
+                <br><br>
             </div>
 
+
             <div class="col-12-footer">
-                <a href="flowersPage.html" class="footer">
+                <a href="liveMap.html" class="footer">
                     <button class="footerBTN">Map</button>
                 </a>
+                <br><br>
             </div>
 
-            <div class="col-12-footer">
-                <a href="halotPage.html" class="footer">
-                    <button class="footerBTN">About</button>
-                </a>
-            </div>
             <div class="col-12-footer">
                 <a href="about.html" class="footer">
-                    <button class="footerBTN">Help</button>
+                    <button class="footerBTN">About</button>
                 </a>
-
             </div>
 
         </div>
 
     </div>
     <div class="col-4-footer">
-
-
+                 <h4 style="color: gray"> SitMe is part of Booking Holdings, the world leader in online travel and related services</h4>
+                 <a href="https://www.booking.com/index.html?aid=1703513&label=55&">
+                        <img src="images/sp1.PNG" width="50%"><br>
+                 </a>
+                 <a href="https://www.priceline.com/?tab=hotels&kw=priceline&match=e&adp=&refid=PLGOOGLECPCB&refclickid=d%3AcBRAND16833014270g46024356902310941049094aud-975681418943%3Akwd-10842441%7C1008006%7C&gclid=Cj0KCQiAqbyNBhC2ARIsALDwAsDdWOoJauWGh1A_2Flluzj5_WGUAOZAFmVjXBa05QOlNyF9tYd9onMaApOhEALw_wcB&slingshot=1048&vrid=fb46b3784e4911cc68a93b184e0e9ee8">
+                        <img src="images/sp2.PNG" width="50%"><br>
+                 </a>
+                 <a href="https://www.il.kayak.com/horizon/sem/hotels/general?lang=en&skipapp=true&destination=c27311&kw=-1&gclid=Cj0KCQiAqbyNBhC2ARIsALDwAsAZkZht0aS3m7rGOl5jAr70WTxwRPq_uUtz6CcKScmtrpREnvKlot4aArU6EALw_wcB">
+                         <img src="images/sp3.PNG" width="50%"><br>
+                 </a>
     </div>
 </div>
 </body>
