--- a/home1.html
+++ b/home1.html
@@ -32,9 +32,11 @@
             </a>
         </div>
 
+        <div class="col-1"></div>
+
 
         <div class="col-2-bar">
-            <a href="MyReservation.html" class="footer">
+            <a href="Reservations.html" class="footer">
                 <button class="headerBTN">My reservation</button>
             </a>
         </div>
@@ -46,17 +48,12 @@
         </div>
 
         <div class="col-2-bar">
-            <a href="About.html" class="footer">
+            <a href="about.html" class="footer">
                 <button class="headerBTN">About</button>
             </a>
         </div>
 
-        <div class="col-2-bar">
-            <a href="Help.html" class="footer">
-                <button class="headerBTN">Help</button>
-            </a>
-        </div>
-
+        <div class="col-1"></div>
 
         <div class="col-2-bar">
             <a href="signin.html" class="footer">
@@ -74,7 +71,7 @@
         <div class="col-3">
             <div class="col-4-location" >
                  <h3>Search based on your current location</h3>
-                <a href="Location.html" class="footer">
+                <a href="liveMap.html" class="footer">
                     <img class="center" src="images/map.png" class = "location1">
                 </a>
             </div>
@@ -84,7 +81,7 @@
                 <P><strong>Méli-Mélo</strong><br>Dining Bar - Cocktails</P>
                 <a href="https://www.facebook.com/melimelotlv/">
                         <img class="center" src="images/left1.PNG">
-                </a>
+                </a><br><br>
                 <P><strong>Dalida</strong><br>Mediterranean - Chef</P>
                 <a href="https://en.dalidatlv.co.il/">
                         <img class="center" src="images/left2.PNG">
@@ -93,7 +90,7 @@
           </div>
 
           <div class="col-6" id = "main_search">
-                <h1 >Find your table</h1><br>
+                <h1 >Find your table</h1>
                 <label class="labels" for="date">Date</label><br>
                 <input type="date" id="date" name="date"><br>
                 <label class="labels" for="time">Time</label><br>
@@ -102,15 +99,18 @@
                 <input id = "num_people" type="number" name="number"><br>
                 <label class="labels" for="location">Location</label><br>
                 <input id = "location" type="location" name="location"><br><br>
-                <button class="button1" type="submit">Find me a SIT</button>
+                <a href="SearchResults.html">
+                        <button class="button1" type="button">Find me a SIT</button>
+                </a>
           </div>
 
-          <div class="col-3" id = right_photos>
+          <div class="col-3" >
                 <img src="images/asian.PNG" class="center"><br>
                 <img src="images/beit_kandinof.PNG" class="center" ><br>
                 <img src="images/wine.PNG" class="center" ><br>
                 <img src="images/food.PNG" class="center" ><br>
                 <img src="images/gaia_garden.png" class="center"><br>
+                <img src="images/left1.PNG" class="center"><br>
           </div>
 
 
@@ -124,7 +124,7 @@
     <div class="col-4-footer">
         <div class="col-12-footer">
             <img src="images/logo.PNG" class = "logo"><br>
-            <h1 id="FootCont">Contact us - 052-5225280</h1>
+            <h1 class="FootCont">Contact us - 052-5225280</h1>
         </div>
         <div class="col-12-footer">
           <button class="button1_left" onclick="topFunction()" id="topFunction" title="Back to top">Back to top</button>
@@ -134,35 +134,40 @@
     <div class="col-4-footer">
         <div class="rowFooter">
             <div class="col-12-footer">
-                <a href="otherPage.html" class="footer">
+                <a href="Reservations.html" class="footer">
                     <button class="footerBTN">My reservation</button>
                 </a>
+                <br><br>
             </div>
 
+
             <div class="col-12-footer">
-                <a href="flowersPage.html" class="footer">
+                <a href="liveMap.html" class="footer">
                     <button class="footerBTN">Map</button>
                 </a>
+                <br><br>
             </div>
 
-            <div class="col-12-footer">
-                <a href="halotPage.html" class="footer">
-                    <button class="footerBTN">About</button>
-                </a>
-            </div>
             <div class="col-12-footer">
                 <a href="about.html" class="footer">
-                    <button class="footerBTN">Help</button>
+                    <button class="footerBTN">About</button>
                 </a>
-
             </div>
 
         </div>
 
     </div>
     <div class="col-4-footer">
-
-
+                 <h4 style="color: gray"> SitMe is part of Booking Holdings, the world leader in online travel and related services</h4>
+                 <a href="https://www.booking.com/index.html?aid=1703513&label=55&">
+                        <img src="images/sp1.PNG" width="50%"><br>
+                 </a>
+                 <a href="https://www.priceline.com/?tab=hotels&kw=priceline&match=e&adp=&refid=PLGOOGLECPCB&refclickid=d%3AcBRAND16833014270g46024356902310941049094aud-975681418943%3Akwd-10842441%7C1008006%7C&gclid=Cj0KCQiAqbyNBhC2ARIsALDwAsDdWOoJauWGh1A_2Flluzj5_WGUAOZAFmVjXBa05QOlNyF9tYd9onMaApOhEALw_wcB&slingshot=1048&vrid=fb46b3784e4911cc68a93b184e0e9ee8">
+                        <img src="images/sp2.PNG" width="50%"><br>
+                 </a>
+                 <a href="https://www.il.kayak.com/horizon/sem/hotels/general?lang=en&skipapp=true&destination=c27311&kw=-1&gclid=Cj0KCQiAqbyNBhC2ARIsALDwAsAZkZht0aS3m7rGOl5jAr70WTxwRPq_uUtz6CcKScmtrpREnvKlot4aArU6EALw_wcB">
+                         <img src="images/sp3.PNG" width="50%"><br>
+                 </a>
     </div>
 </div>
 </body>
