--- a/signin.html
+++ b/signin.html
@@ -19,31 +19,28 @@
             </a>
         </div>
 
+        <div class="col-1"></div>
+
 
         <div class="col-2-bar">
-            <a href="MyReservation.html" class="footer">
+            <a href="Reservations.html" class="footer">
                 <button class="headerBTN">My reservation</button>
             </a>
         </div>
 
         <div class="col-2-bar">
-            <a href="LiveMap.html" class="footer">
+            <a href="liveMap.html" class="footer">
                 <button class="headerBTN">Map</button>
             </a>
         </div>
 
         <div class="col-2-bar">
-            <a href="About.html" class="footer">
+            <a href="about.html" class="footer">
                 <button class="headerBTN">About</button>
             </a>
         </div>
 
-        <div class="col-2-bar">
-            <a href="Help.html" class="footer">
-                <button class="headerBTN">Help</button>
-            </a>
-        </div>
-
+        <div class="col-1"></div>
 
         <div class="col-2-bar">
             <a href="signin.html" class="footer">
@@ -55,16 +52,21 @@
 
 <!-------- Search -------->
 <div class="col-12 findTable">
-        <div class="col-3">
+        <div class="col-4">
+
+                 <img src="images/beit_kandinof.PNG" class="center" ><br>
+                <img src="images/wine.PNG" class="center" ><br>
+                <img src="images/food.PNG" class="center" ><br>
+                <img src="images/gaia_garden.png" class="center"><br>
 
         </div>
 
-<div class="col-6" id = "main_search">
-             <div class="info">
+<div class="col-4" id = "main_search" >
+             <div id="info">
                    <form action="action_page.php" style="border:none">
-                            <h2 class="title1">Log in</h2>
+                       <h2 class="title1"><strong> Log in</strong></h2>
                             <label for="email" class="labels">Email</label><br>
-                            <input type="text" placeholder="Enter your email adress" id="email" required><br>
+                            <input type="text" placeholder="Enter email adress" id="email" required><br>
                             <label for="password" class="labels">Password</label><br>
                             <input type="password" placeholder="Select a password" id="password" required><br>
                             <label for="name" class="labels">Full name</label><br>
@@ -80,9 +82,14 @@
           </div>
       </div>
 
-              <div class="col-3" id = right_photos>
+              <div class="col-4" id = right_photos>
 
-          </div>
+                <img src="images/beit_kandinof.PNG" class="center" ><br>
+                <img src="images/wine.PNG" class="center" ><br>
+                <img src="images/food.PNG" class="center" ><br>
+                <img src="images/gaia_garden.png" class="center"><br>
+
+              </div>
     </div>
 
 <!-------- footer -------->
@@ -92,7 +99,7 @@
     <div class="col-4-footer">
         <div class="col-12-footer">
             <img src="images/logo.PNG" class = "logo"><br>
-            <h1 id="FootCont">Contact us - 052-5225280</h1>
+            <h1 class="FootCont">Contact us - 052-5225280</h1>
         </div>
         <div class="col-12-footer">
           <button class="button1_left" onclick="topFunction()" id="topFunction" title="Back to top">Back to top</button>
@@ -102,35 +109,40 @@
     <div class="col-4-footer">
         <div class="rowFooter">
             <div class="col-12-footer">
-                <a href="otherPage.html" class="footer">
+                <a href="Reservations.html" class="footer">
                     <button class="footerBTN">My reservation</button>
                 </a>
+                <br><br>
             </div>
 
+
             <div class="col-12-footer">
-                <a href="flowersPage.html" class="footer">
+                <a href="liveMap.html" class="footer">
                     <button class="footerBTN">Map</button>
                 </a>
+                <br><br>
             </div>
 
-            <div class="col-12-footer">
-                <a href="halotPage.html" class="footer">
-                    <button class="footerBTN">About</button>
-                </a>
-            </div>
             <div class="col-12-footer">
                 <a href="about.html" class="footer">
-                    <button class="footerBTN">Help</button>
+                    <button class="footerBTN">About</button>
                 </a>
-
             </div>
 
         </div>
 
     </div>
     <div class="col-4-footer">
-
-
+                 <h4 style="color: gray"> SitMe is part of Booking Holdings, the world leader in online travel and related services</h4>
+                 <a href="https://www.booking.com/index.html?aid=1703513&label=55&">
+                        <img src="images/sp1.PNG" width="50%"><br>
+                 </a>
+                 <a href="https://www.priceline.com/?tab=hotels&kw=priceline&match=e&adp=&refid=PLGOOGLECPCB&refclickid=d%3AcBRAND16833014270g46024356902310941049094aud-975681418943%3Akwd-10842441%7C1008006%7C&gclid=Cj0KCQiAqbyNBhC2ARIsALDwAsDdWOoJauWGh1A_2Flluzj5_WGUAOZAFmVjXBa05QOlNyF9tYd9onMaApOhEALw_wcB&slingshot=1048&vrid=fb46b3784e4911cc68a93b184e0e9ee8">
+                        <img src="images/sp2.PNG" width="50%"><br>
+                 </a>
+                 <a href="https://www.il.kayak.com/horizon/sem/hotels/general?lang=en&skipapp=true&destination=c27311&kw=-1&gclid=Cj0KCQiAqbyNBhC2ARIsALDwAsAZkZht0aS3m7rGOl5jAr70WTxwRPq_uUtz6CcKScmtrpREnvKlot4aArU6EALw_wcB">
+                         <img src="images/sp3.PNG" width="50%"><br>
+                 </a>
     </div>
 </div>
 </body>
