--- a/liveMap.html
+++ b/liveMap.html
@@ -2,9 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="header_and_footer.css">
     <title>liveMap</title>
 </head>
 <body>
+
+<!-------- Welcome bar -------->
+
+<div class="col-12-bar">
+        <div class="col-2-bar">
+            <a href="home1.html">
+                <img src="images/logo.PNG" class = "logo">
+            </a>
+        </div>
+
+        <div class="col-1"></div>
+
+
+        <div class="col-2-bar">
+            <a href="Reservations.html" class="footer">
+                <button class="headerBTN">My reservation</button>
+            </a>
+        </div>
+
+        <div class="col-2-bar">
+            <a href="liveMap.html" class="footer">
+                <button class="headerBTN">Map</button>
+            </a>
+        </div>
+
+        <div class="col-2-bar">
+            <a href="about.html" class="footer">
+                <button class="headerBTN">About</button>
+            </a>
+        </div>
+
+        <div class="col-1"></div>
+
+        <div class="col-2-bar">
+            <a href="signin.html" class="footer">
+                <button class="headerBTN" id="login">Log in/ Sign in</button>
+            </a>
+        </div>
+</div>
 
 <script>
      const successCallback = (position) => {
@@ -34,6 +74,61 @@
      });
 
 </script>
+     <!-------- footer -------->
+
+<div class="col-12-footer">
+
+    <div class="col-4-footer">
+        <div class="col-12-footer">
+            <img src="images/logo.PNG" class = "logo"><br>
+            <h1 class="FootCont">Contact us - 052-5225280</h1>
+        </div>
+        <div class="col-12-footer">
+          <button class="button1_left" onclick="topFunction()" id="topFunction" title="Back to top">Back to top</button>
+        </div>
+    </div>
+
+    <div class="col-4-footer">
+        <div class="rowFooter">
+            <div class="col-12-footer">
+                <a href="Reservations.html" class="footer">
+                    <button class="footerBTN">My reservation</button>
+                </a>
+                <br><br>
+            </div>
+
+
+            <div class="col-12-footer">
+                <a href="liveMap.html" class="footer">
+                    <button class="footerBTN">Map</button>
+                </a>
+                <br><br>
+            </div>
+
+            <div class="col-12-footer">
+                <a href="about.html" class="footer">
+                    <button class="footerBTN">About</button>
+                </a>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="col-4-footer">
+                 <h4 style="color: gray"> SitMe is part of Booking Holdings, the world leader in online travel and related services</h4>
+                 <a href="https://www.booking.com/index.html?aid=1703513&label=55&">
+                        <img src="images/sp1.PNG" width="50%"><br>
+                 </a>
+                 <a href="https://www.priceline.com/?tab=hotels&kw=priceline&match=e&adp=&refid=PLGOOGLECPCB&refclickid=d%3AcBRAND16833014270g46024356902310941049094aud-975681418943%3Akwd-10842441%7C1008006%7C&gclid=Cj0KCQiAqbyNBhC2ARIsALDwAsDdWOoJauWGh1A_2Flluzj5_WGUAOZAFmVjXBa05QOlNyF9tYd9onMaApOhEALw_wcB&slingshot=1048&vrid=fb46b3784e4911cc68a93b184e0e9ee8">
+                        <img src="images/sp2.PNG" width="50%"><br>
+                 </a>
+                 <a href="https://www.il.kayak.com/horizon/sem/hotels/general?lang=en&skipapp=true&destination=c27311&kw=-1&gclid=Cj0KCQiAqbyNBhC2ARIsALDwAsAZkZht0aS3m7rGOl5jAr70WTxwRPq_uUtz6CcKScmtrpREnvKlot4aArU6EALw_wcB">
+                         <img src="images/sp3.PNG" width="50%"><br>
+                 </a>
+    </div>
+</div>
+
+
 
 </body>
 </html>
